# Stock_Research_ETF

./: .rtd-environment.yml  LICENSE.rst  Makefile  README.rst  environment.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat  project_organization.rst
docs/getting_started/: ENVIRONMENT.rst  INSTALL.rst  getting_started.rst
notebooks/: ASX200_Comparison.ipynb  ETF_Analyser.ipynb  evaluate_etfs.ipynb
